# camagent

./: .autotools  .cproject  .project  01-设计方案.eddx  01-设计方案.pages  01-设计说明.docx  02-调试记录.pages  03-使用说明.pages  04-错误提示与对应操作.pages  LICENSE  Makefile  NEWS  README  camagent.xml  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  debug-his.txt  ~$1-设计说明.docx
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
release/: camagent.xml
src/: ADefine.h  ATimeSpace.cpp  ATimeSpace.h  AsciiProtocol.cpp  AsciiProtocol.cpp.bak  AsciiProtocol.h  AsciiProtocolBase.h  AsciiProtocolBase.h.bak  AstroDeviceDef.h  AstroDeviceState.h  CDs9.cpp  CDs9.h  CameraAndorCCD.cpp  CameraAndorCCD.cpp.bak  CameraAndorCCD.h  CameraApogee.cpp  CameraApogee.h  CameraBase.cpp  CameraBase.h  CameraFLI.cpp  CameraFLI.h  CameraFLICCD.cpp  CameraFLICCD.h  CameraFLICCD.h.bak  CameraGY.cpp  CameraGY.h  CameraGYCCD.cpp  CameraGYCCD.h  CameraPI.cpp  CameraPI.h  CameraPICCD.cpp  CameraPICCD.h  ConfigParam.h  ConfigurationParameter.cpp  ConfigurationParameter.h  FITSHandler.h  FileTransferClient.cpp  FileTransferClient.h  FilterCtrl.cpp  FilterCtrl.h  (+43 more)
src/.deps/: ATimeSpace.Po  CameraAndorCCD.Po  CameraBase.Po  CameraFLI.Po  CameraGY.Po  CameraPI.Po  GLog.Po  IoConfig.Po  NTPClient.Po  asciiproto.Po  camagent.Po  cameracs.Po  daemon.Po  ioservice_keep.Po  msgque_base.Po  tcp_asio.Po
src/backup/: CDs9.cpp  CameraAndorCCD.cpp  CameraAndorCCD.h  CameraGY.cpp  CameraGY.h  FileTransferClient.cpp  FileTransferClient.h  FilterCtrlFLI.cpp  VersionMonitor.cpp  cameracs.h
